# VRChat-Photo-Manager

./: .gitignore  build-release.sh  changelog  config.json  package.json  pnpm-lock.yaml  readme.md
.github/workflows/: build.yml
gui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
gui/src/: account.ts  contextMenu.ts  index.css  index.ts  photoUI.ts  settings.ts  tabs.ts  utils.ts
gui/src/photoUI/: copy.ts  delete.ts  info.ts  next.ts  people.ts  prev.ts  share.ts  stats.ts  warnings.ts
src/: index.js  logger.js  mergesort.js  photoMover.js  photoServer.js  photoSync.js  styles.css
src-tauri/: Cargo.toml
src-tauri/src/: main.rs  pngmeta.rs
src-tauri/src/frontend_calls/: change_final_path.rs  load_photo_meta.rs  load_photos.rs
src-tauri/src/util/: get_photo_path.rs
src/Components/: App.tsx  PhotoList.tsx  PhotoViewer.tsx  SettingsMenu.tsx
src/Components/Managers/: PhotoListRenderingManager.tsx  PhotoManager.tsx
src/Components/Structs/: Photo.ts  PhotoMetadata.ts
src/css/: viewer.css
