[package]
name = "VRChatPhotoManager"
version = "0.2.6-hot1"
description = "VRChat Photo Manager"
authors = ["_phaz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.9", features = [ "tray-icon", "image-png", "devtools" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "5.3"
dirs = "6.0"
notify = "8.2"
regex = "1.12"
reqwest = { version = "0.12", features = ["blocking"] }
image = "0.25"
fast_image_resize = { version = "5.3", features = [ "image" ] }
arboard = "3.6"
tauri-plugin-single-instance = { version = "2.3", features = ["deep-link"] }
tauri-plugin-shell = "2.3"
tauri-plugin-http = "2.5"
tauri-plugin-process = "2.3"
[target.'cfg(windows)'.dependencies]
mslnk = { version = "0.1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release.package.wry]
debug = true
debug-assertions = true
